--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_refresh"
-        android:icon="@drawable/ic_refresh"
-        android:title="@string/refresh"
+        android:id="@+id/action_home"
+        android:icon="@drawable/ic_home"
+        android:title="Home"
         app:showAsAction="ifRoom"/>
 
     <item
